--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "piping": "0.1.6",
     "react": "0.14.4",
     "react-bootstrap": "0.28.2",
-    "react-dnd": "^1.1.4",
+    "react-dnd": "2.0.2",
+    "react-dnd-html5-backend": "2.0.2",
     "react-document-title": "^1.0.0",
     "react-dom": "0.14.4",
     "react-dropzone": "^1.1.1",
@@ -48,11 +49,11 @@
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
     "react-pure-render": "^1.0.2",
-    "react-redux": "^3.0.0",
+    "react-redux": "3.1.2",
     "react-router": "2.0.0-rc5",
     "react-router-bootstrap": "0.20.1",
     "react-sidebar": "^1.1.0",
-    "redux": "^3.0.4",
+    "redux": "3.3.1",
     "redux-logger": "^2.0.4",
     "redux-storage": "^1.3.4",
     "redux-thunk": "^1.0.0",
