--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "babel-core": "^6.2.1",
     "babel-eslint": "3.1.30",
     "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-extensible-destructuring": "^2.0.0",
     "babel-plugin-transform-class-properties": "6.3.0",
     "babel-plugin-transform-decorators": "^6.1.18",
@@ -84,10 +85,12 @@
     "extract-text-webpack-plugin": "^0.5.0",
     "file-loader": "^0.8.1",
     "gulp": "^3.8.10",
+    "gulp-babel": "^6.1.2",
     "gulp-bg": "0.0.5",
     "gulp-closure-compiler": "^0.2.17",
     "gulp-eslint": "^0.8.0",
     "gulp-nightwatch": "^0.2.9",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.2",
     "harmonize": "^1.4.1",
     "imports-loader": "^0.6.3",
@@ -108,6 +111,7 @@
     "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
     "skin-deep": "~0.6.0",
+    "source-map-support": "^0.4.0",
     "style-loader": "^0.9.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
