--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
-    "react-pdf": "0.0.10",
+    "react-pdf": "git+https://github.com/codeshelf/react-pdf.git",
     "react-pure-render": "^1.0.2",
     "react-redux": "3.1.2",
     "react-router": "2.0.0-rc5",
