--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.4.0",
     "d3": "^3.5.10",
     "del": "^1.1.1",
+    "estraverse-fb": "^1.3.1",
     "eventemitter3": "^0.1.6",
     "express": "^4.11.2",
     "fastclick": "^1.0.6",
