--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "css-loader": "^0.9.1",
     "esformatter": "^0.9.2",
     "esformatter-jsx": "^4.1.3",
-    "eslint-plugin-react": "^2.0.1",
+    "eslint": "^2.4.0",
+    "eslint-plugin-react": "^4.2.2",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^0.5.0",
