--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "yargs": "^3.3.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^1.2.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.2.1",
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.0",
@@ -81,7 +81,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.2.0",
-    "css-loader": "^0.9.1",
+    "css-loader": "^0.23.1",
     "esformatter": "^0.9.2",
     "esformatter-jsx": "^4.1.3",
     "eslint": "^2.4.0",
@@ -115,14 +115,14 @@
     "node-notifier": "^4.1.0",
     "react-hot-loader": "^1.2.7",
     "run-sequence": "^1.0.2",
-    "sass-loader": "^1.0.0",
+    "sass-loader": "^3.2.0",
     "skin-deep": "~0.6.0",
     "source-map-support": "^0.4.0",
-    "style-loader": "^0.9.0",
+    "style-loader": "^0.13.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
-    "webpack": "1.9.13",
-    "webpack-dev-server": "1.8.2"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "1.14.0"
   },
   "version": "2.0.0"
 }
