--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "jspath": "^0.3.2",
     "lodash": "3.10.1",
     "moment": "^2.9.0",
-    "node-libs-browser": "^0.4.1",
     "nightwatch": "^0.8.16",
+    "node-libs-browser": "^0.4.1",
     "node-uuid": "^1.4.7",
     "normalize.css": "^3.0.2",
     "orb": "^1.0.9",
@@ -52,7 +52,7 @@
     "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
-    "react-pdf": "git+https://github.com/codeshelf/react-pdf.git",
+    "react-pdf": "0.0.10",
     "react-pure-render": "^1.0.2",
     "react-redux": "3.1.2",
     "react-router": "2.0.0-rc5",
