--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux-thunk": "^1.0.0",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
+    "superagent": "^1.8.3",
     "superagent-bluebird-promise": "2.1.1",
     "validator": "^3.34.0",
     "yargs": "^3.3.1"
@@ -99,6 +100,7 @@
     "karma-sourcemap-loader": "^0.3.5",
     "karma-teamcity-reporter": "~0.1.2",
     "karma-webpack": "^1.7.0",
+    "less": "^2.6.1",
     "less-loader": "^2.0.0",
     "node-notifier": "^4.1.0",
     "react-hot-loader": "^1.2.7",
