--- a/package.json
+++ b/package.json
@@ -40,28 +40,30 @@
     "orb": "^1.0.9",
     "pdfjs-dist": "^1.4.133",
     "piping": "0.1.6",
-    "react": "0.14.4",
+    "react": "^15.0.1",
     "react-bootstrap": "0.28.2",
     "react-bootstrap-multiselect": "^1.0.1",
-    "react-dnd": "2.0.2",
+    "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "2.0.2",
     "react-document-title": "^1.0.0",
-    "react-dom": "0.14.4",
+    "react-dom": "^15.0.1",
     "react-dropzone": "^3.3.2",
     "react-fa": "^4.0.0",
     "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
-    "react-intl": "^1.2.2",
+    "react-intl": "^2.1.0",
     "react-pdf": "0.0.10",
     "react-pure-render": "^1.0.2",
-    "react-redux": "3.1.2",
-    "react-router": "2.0.0-rc5",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
     "react-router-bootstrap": "0.20.1",
     "react-sidebar": "^1.1.0",
-    "redux": "3.3.1",
+    "redux": "^3.5.1",
     "redux-logger": "^2.0.4",
-    "redux-storage": "^1.3.4",
-    "redux-thunk": "^1.0.0",
+    "redux-storage": "^4.0.0",
+    "redux-storage-decorator-filter": "^1.1.3",
+    "redux-storage-engine-localstorage": "^1.1.0",
+    "redux-thunk": "^2.0.1",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
     "superagent": "^1.8.3",
