--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "bardcode": "git+https://github.com/froatsnook/bardcode.git",
+    "bardcode": "git+https://github.com/froatsnook/bardcode.git#e210865370678caf5d549add9ceada81056bd13f",
     "bluebird": "^2.10.2",
     "bootstrap": "^3.3.6",
     "chance": "^0.7.3",
@@ -84,6 +84,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.2.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "esformatter": "^0.9.2",
     "esformatter-jsx": "^4.1.3",
@@ -116,7 +117,9 @@
     "karma-webpack": "^1.7.0",
     "less": "^2.6.1",
     "less-loader": "^2.0.0",
+    "mocha": "^2.4.5",
     "node-notifier": "^4.1.0",
+    "node-sass": "^3.5.3",
     "react-hot-loader": "^1.2.7",
     "run-sequence": "^1.0.2",
     "sass-loader": "^3.2.0",
